# prac_django

./: README.md  pyproject.toml
conversation/: forms.py  models.py  views.py
conversation/migrations/: 0001_initial.py
conversation/templates/conversation/: new.html
core/: forms.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: base.html  contract.html  index.html  login.html  signup.html
dashboard/templates/dashboard/: index.html
item/: forms.py  models.py  urls.py  views.py
item/migrations/: 0001_initial.py  0002_item.py
item/templates/item/: detail.html  form.html  items.html
pcore/: asgi.py  settings.py  urls.py  wsgi.py
