[tool.poetry]
name = "prac-django"
version = "0.1.0"
description = ""
authors = ["Niwaiwa <po2846@gmail.com>"]
readme = "README.md"
packages = [{include = "prac_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
python-dotenv = "^1.0.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
